# Arpeggio

./: .coveragerc  .editorconfig  .gitattributes  .gitignore  .hgignore  .travis.yml  404.html  AUTHORS  AUTHORS.md  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  LICENCE  LICENSE  LICENSE.txt  README  README.md  README.rst  THANKS  THANKS.md  TODO  __init__.py  azure-pipelines.yml  conftest.py  dev-requirements.txt  extra.css  index.html  install-test.sh  justfile  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  runtests.sh  search.html  setup.cfg  setup.py  setup.py.bak  sitemap.xml  versions.json
.github/: ci-linux-ubuntu.yml
.github/workflows/: ci-linux-ubuntu.yml
1.10/debugging/: index.html
1.10/parse_trees/: index.html
1.10/semantics/: index.html
1.9/: index.html  search.html
1.9/configuration/: index.html
1.9/getting_started/: index.html
1.9/grammars/: index.html
1.9/handling_errors/: index.html
1.9/parse_trees/: index.html
1.9/semantics/: index.html
1.9/troubleshooting/: index.html
2.0/: 404.html  index.html
2.0/configuration/: index.html
about/contributing/: index.html
about/discuss/: index.html
about/license/: index.html
arpeggio/: __init__.py  arpeggio.py  arpeggio_settings.py  cleanpeg.py  cleanpeg.py.bak  error_classes.py  export.py  export.py.bak  parser_base.py  parser_peg.py  parser_peg_clean.py  parser_python.py  parser_python_class.py  peg.py  peg_expressions.py  peg_helpers.py  peg_lexical.py  peg_nodes.py  peg_semantic_actions.py  peg_utils.py  run_pytest3_mypy_in_a_loop.sh  textx.py  utils.py  utils.py.bak  visitor_base.py  visitor_peg.py
arpeggio/tests/: test_config_modifiers.py  test_decorator_combine.py  test_default_semantic_action.py  test_eolterm.py  test_error_reporting.py  test_error_reporting_verbose.py  test_error_reporting_verbose2.py  test_examples.py  test_exporter.py  test_flags.py  test_parser_params.py  test_parser_resilience.py  test_parsing_expressions.py  test_pathologic_models.py  test_peg_actions.py  test_peg_actions_and_states.py  test_peg_config_modifiers.py  test_peg_indentation.py  test_peg_indentation_using_same.py  test_peg_parser.py  test_position.py  test_ptnode_navigation_expressions.py  test_python_parser.py  test_reduce_tree.py  test_semantic_action_results.py  test_separators.py  test_sequence_params.py  test_suppression.py  test_unicode.py  test_visitor.py
configuration/: index.html
debugging/: index.html
development/: 404.html  index.html  search.html
development/getting_started/: index.html
development/grammars/: index.html
development/tutorials/: csvfile_parser_model.dot
docs/: Makefile  conf.py  configuration.md  debugging.md  extra.css  getting_started.md  grammars.md  handling_errors.md  index.md  index.rst  make.bat  parse_trees.md  semantics.md  style.css  troubleshooting.md
docs/about/: contributing.md  discuss.md  license.md
docs/tutorials/: bibtex.md  calc.md  csv.md
examples/: README.md  __init__.py  bibtex.py  calc.py  calc_peg.py  calc_peg_visitor.py  csv.py  json.py  peg_peg.py  robot.py  robot_peg.py  simple.py
examples/bibtex/: README.md  bibtex.py  bibtex_example.bib
examples/calc/: README.md  calc.peg  calc.py  calc_clean.peg  calc_cleanpeg.py  calc_cleanpeg.py.bak  calc_peg.py  calc_peg.py.bak
examples/csv/: README.md  csv.peg  csv.py  csv.py.bak  csv_peg.py  csv_peg.py.bak  csvlang.py  csvlang_peg.py  test_data.csv
examples/json/: README.md  json.py  json_test.py  test.json
examples/peg_peg/: README.md  peg.peg  peg_peg.py
examples/robot/: README.md  program.rbt  robot.peg  robot.py  robot_peg.py  robot_peg.py.bak
examples/simple/: README.md  program.simple  simple.py
examples/textx/: dommlite.tx  experiment.pf  pyflies.tx  textx.py
getting_started/: index.html
grammars/: index.html
handling_errors/: index.html
latest/: 404.html  index.html  search.html  sitemap.xml
latest/configuration/: index.html
latest/debugging/: index.html
latest/getting_started/: index.html
latest/grammars/: index.html
latest/handling_errors/: index.html
latest/parse_trees/: index.html
latest/search/: search_index.json
latest/semantics/: index.html
latest/troubleshooting/: index.html
mkdocs/: search_index.json
parse_trees/: index.html
perf-tests/: grammar.py  requirements.txt  run_all_py3.sh  run_memory.sh  run_speed.sh  test_memory_memoization.py  test_memory_nomemoization.py  test_speed.py
perf-tests/reports/: _speed_report.txt  py2_memory_report_memoization.txt  py2_memory_report_nomemoization.txt  py2_speed_report.txt  py3_memory_report_memoization.txt
search/: search_index.json
semantics/: index.html
stable/: 404.html  index.html  search.html  sitemap.xml
stable/configuration/: index.html
stable/debugging/: index.html
stable/getting_started/: index.html
stable/grammars/: index.html
stable/handling_errors/: index.html
stable/parse_trees/: index.html
stable/semantics/: index.html
stable/troubleshooting/: index.html
tests/: run_pytest3_mypy_in_a_loop.sh  shellcheck.sh  test_decorator_combine.py  test_default_semantic_action.py  test_eolterm.py  test_error_reporting.py  test_examples.py  test_exporter.py  test_flags.py  test_parser_params.py  test_parser_resilience.py  test_parsing_expressions.py  test_pathologic_models.py  test_peg_parser.py  test_position.py  test_ptnode_navigation_expressions.py  test_python_parser.py  test_reduce_tree.py  test_semantic_action_results.py  test_separators.py  test_sequence_params.py  test_speed.py  test_suppression.py  test_unicode.py  test_visitor.py
tests/perf/: grammar.py  run_all_py2.sh  test_memory_memoization.py  test_memory_nomemoization.py  test_speed.py
tests/regressions/: direct_rule_call.py  test_direct_rule_call.py  test_memoization.py
tests/speed/: input_comments.txt  test_speed.py  test_speed_comments.py  test_speed_profile.py
tests/unit/: test_decorator_combine.py  test_decorator_combine.py.bak  test_default_semantic_action.py  test_default_semantic_action.py.bak  test_eolterm.py  test_error_reporting.py  test_flags.py  (+26 more)
troubleshooting/: index.html
(+73 files in other folders)
