[metadata]
description-file = README.rst
license_file = LICENSE

[bdist_wheel]
universal=1

[aliases]
test=pytest

[tool:pytest]
addopts = --verbose
python_files = arpeggio/tests/*.py

[pycodestyle]
max_line_length = 160
# rules for codestyle to accept condensed grammar definition
# to match Igors Style rules
# E241 multiple spaces after ':'
# E272 multiple spaces before keyword
# E302 expected 2 blank lines, found 1
# E402 module level import not at top of file
# E704 multiple statements on one line
ignore = E241, E272, E302, E402, E704
