[metadata]
name = Arpeggio
author = Igor R. Dejanovic
author_email = igor.dejanovic@gmail.com
license = MIT
description = Packrat parser interpreter
keywords = parser, PEG, packrat, library, interpreter
url = https://github.com/textX/Arpeggio
download_url=
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Software Development :: Interpreters
    Topic :: Software Development :: Compilers
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
include_package_data = True
setup_requires =
    pytest-runner
    wheel
tests_require = pytest

[options.packages.find]
exclude =
    arpeggio.tests
    examples
    examples.*

[options.extras_require]
dev =
    wheel
    mkdocs
    mike
    twine
test =
     flake8
     coverage
     coveralls
     pytest

[bdist_wheel]
universal=1

[aliases]
test=pytest

[tool:pytest]
addopts = --verbose
python_files = arpeggio/tests/*.py 

[flake8]
ignore = E741,W503
max-line-length = 90
exclude = .git/*,.eggs/*,
          build/*,site/*,venv*,
          .ropeproject/*
